input okay now